@@ -19,10 +19,10 @@
         <a class="button" href="#search">Search</a>
     </div>
 
-    <ul id="home" title="eSTAR" selected="true">
+    <ul id="home" title="Home" selected="true">
     
-     <li><img src="png/network.png"></li>
-      <li><a href="robonet-2.0/cgi-bin/index.cgi">Robonet-2.0 Login</a></li>
+     <li>Welcome to <span class="e">e<span class="star">STAR</span></span></li>
+      <li><a href="robonet/index.html">Robonet-2.0 Login</a></li>
       <li><a href="ukirt/cgi-bin/index.cgi">UKIRT Login</a></li>
       <li><a href="voevent/cgi-bin/index.cgi">VOEvent Manual Inject</a></li>
       <li><a href="estar/html/status.html">Network Status</a></li>
@@ -57,7 +57,7 @@
             <div class="row">
                 <label>Confirm</label>
                 <input type="password" name="password" value=""/>
-            </div>
+            </div>		
         </fieldset>
     </div>
 
