@@ -1,0 +1,13 @@
+
+<ul title="Robonet">
+   <li><a href="robonet/cgi-bin/status.cgi">Microlensing Programme</a></li>
+   <li><a href="robonet/cgi-bin/status.cgi">Robonet-2.0 Override</a></li>
+   <li><a href="#about">About Robonet-2.0</a></li>
+</ul>
+
+<div id="about" title="About" class="panel">
+    <h2>Robonet-2.0</h2>
+    <fieldset>
+
+    </fieldset>
+</div>
