@@ -1,3 +1,6 @@
+2008-05-14 Alasdair Allan <aa@astro.ex.ac.uk>
+        * www/istar/*: Big update, working ongoing.
+
 2008-05-13 Alasdair Allan <aa@astro.ex.ac.uk>
 
         * www/robonet-1.0/cgi-bin/count.cgi & single.cgi: Incremental query
